@@ -2,6 +2,7 @@ package chapter08;
 
 
 /**
+ * 1.设置堆空间大小的参数
  * -Xms 用来设置堆空间(年轻代+老年代)的初始内存大小
  * -X 是jvm的运行蚕食
  * ms 是 memory start
@@ -9,6 +10,15 @@ package chapter08;
  * -Xmx 用来设置堆空间(年轻代+老年代)的最大内存大小
  * -X 是jvm的运行蚕食
  * mx 是 memory max
+ *
+ * 2.默认堆空间的大小
+ * 初始内存大小：物理电脑内存/64
+ *            最大内存大小：物理电脑内存大小/4
+ * 3. 手动设置：-Xms600m -Xmx600m
+ *    开发中建议将初始堆内存和最大堆内存设置成相同的值
+ *
+ * 4.查看设置的参数：方式一：jps/ jstat -gc 进程id
+ *                方式二：-XX:+PrintGCDetails
  */
 public class HeapSpecialInitial {
 
@@ -23,6 +33,12 @@ public class HeapSpecialInitial {
 
         System.out.println("系统内存大小为: " + initialMemory * 64.0 / 1024 + "G");
         System.out.println("系统内存大小为: " + maxMemory * 4.0 / 1024 + "G");
+
+//        try {
+//            Thread.sleep(2000000);
+//        } catch (Exception e) {
+//            e.printStackTrace();
+//        }
     }
 
 }
